2009-10-02  Philippe Normand  <pnormand@igalia.com>

Reviewed by Gustavo Noronha.

        [GTK] missing support for anamorphic PAR video size
        https://bugs.webkit.org/show_bug.cgi?id=29717

        cleanup of caps handling in the video sink

        * platform/graphics/gtk/VideoSinkGStreamer.cpp:
        (webkit_video_sink_set_caps):

Canonical link: https://commits.webkit.org/40580@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49021 268f45cc-cd09-0410-ab3c-d52691b4dbfc